--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -49,6 +49,17 @@
           <%= f.text_field :telephone_number, required: true, class: "col-md-3" %>
         </div>
 
+        <div class="row field d-grid text-center mt-3">
+          <%= f.radio_button :is_valid, true %>
+          <%= f.label :is_valid, "有効" %>
+          <%= f.radio_button :is_valid, false %>
+          <%= f.label :is_valid, "退会" %>
+          <%#= f.radio_button :payment, Order.payments.key(0) %>
+          <%#= f.label :payment, Order.payments_i18n[:credit_card] %>
+          <%#= f.radio_button :payment, Order.payments.key(1) %>
+          <%#= f.label :payment, Order.payments_i18n[:transfer]%>
+        </div>
+
         <div class="row form-group mt-4 ml-26">
           <%= f.submit '変更を保存', class:"btn btn-success" %>
         </div>
