--- a/app/views/admin/restaurants/edit.html.erb
+++ b/app/views/admin/restaurants/edit.html.erb
@@ -55,6 +55,13 @@
           <%= f.text_field :business_hours, required: true, class: "col-md-3" %>
         </div>
 
+        <div class="row field d-grid text-center mt-3">
+          <%= f.radio_button :is_valid, true %>
+          <%= f.label :is_valid, "有効" %>
+          <%= f.radio_button :is_valid, false %>
+          <%= f.label :is_valid, "退会" %>
+        </div>
+
         <div class="row form-group mt-4 ml-26">
           <%= f.submit '変更を保存', class:"btn btn-success" %>
         </div>
