--- a/app/views/customer/customers/edit.html.erb
+++ b/app/views/customer/customers/edit.html.erb
@@ -5,41 +5,46 @@
 
       <div class="mt-4">
         <%= form_with model: @customer, url: customers_information_path, method: :patch do |f| %>
-          <div class="row field d-grid text-center mt-3">
+          <div class="row mt-3">
             <%= f.label :氏名, class: "col-md-3 text-left" %>
             <%= f.text_field :first_name, autofocus: true, required: true, class: "col-md-3" %>
             <%= f.text_field :last_name, autofocus: true, required: true, class: "col-md-3 ml-2" %>
           </div>
 
-          <div class="row field d-grid text-center mt-4">
+          <div class="row mt-4">
             <%= f.label :フリガナ, class: "col-md-3 text-left" %>
             <%= f.text_field :first_name_kana, autofocus: true, required: true, class: "col-md-3" %>
             <%= f.text_field :last_name_kana, autofocus: true, required: true, class: "col-md-3 ml-2" %>
           </div>
 
-          <div class="row field d-grid text-center mt-4">
+          <div class="row mt-4">
             <%= f.label :メールアドレス, class: "col-md-3 text-left" %>
             <%= f.email_field :email, autofocus: true, class: "col-md-6" %>
           </div>
 
-          <div class="row field d-grid text-center mt-4">
+          <div class="row mt-4">
             <%= f.label :都道府県, class: "col-md-3 text-left" %>
             <%= f.collection_select :state_id , State.all,:id,:state %>
           </div>
 
-          <div class="row field d-grid text-center mt-3">
+          <div class="row mt-3">
             <%= f.label :地域エリア, class: "col-md-3 text-left" %>
             <%= render partial: 'shared/areas', locals: { areas: Area.all } %>
           </div>
 
-          <div class="row field d-grid text-center mt-4">
+          <div class="row mt-4">
             <%= f.label :電話番号（ハイフンなし）, class: "col-md-3 text-left" %>
             <%= f.number_field :telephone_number, autofocus: true, class: "col-md-6" %>
           </div>
 
-          <div class="row field d-grid text-center mt-3">
-            <p>含まれるアレルゲン</p>
-            <%= f.collection_check_boxes :allergy_ids, @allergies, :id, :allergen, include_hidden: false %>
+          <div class="row mt-3">
+            <%= f.label :アレルゲン情報登録, class: "col-md-3 text-left" %>
+            <%#= f.collection_check_boxes :allergy_ids, @allergies, :id, :allergen, include_hidden: false %>
+            <div class="allergies_check_boxes col-md-7">
+              <%= f.collection_check_boxes(:allergies, @allergies, :id, :allergen, include_hidden: false) do |a| %>
+                <%= a.label { a.check_box + a.text } %>
+              <% end %>
+            </div>
           </div>
 
           <div class="row field d-grid offset-3 mt-4">
