--- a/app/views/restaurant/menus/edit.html.erb
+++ b/app/views/restaurant/menus/edit.html.erb
@@ -16,14 +16,14 @@
             </div>
 
             <div class="row field d-grid text-center mt-3">
-              <p>含まれるアレルゲン</p>
-              <%# @allergies.each do |allergy| %>
-                <!--<label>-->
-                  <%#= check_box_tag 'Allergy[]' %>
-                  <%#= allergy.allergen %>
-                <!--</label>-->
-              <%# end %>
-              <%= f.collection_check_boxes :allergy_ids, @allergies, :id, :allergen,checked:@menu.allergy_ids ,include_hidden: false %>
+　　　　　　　<%= f.label :含まれるアレルゲン, class: "col-md-4 text-left" %>
+              <div class="allergies_check_boxes col-md-7">
+                <%= f.collection_check_boxes(:allergies, @allergies, :id, :allergen,checked:@menu.allergy_ids, include_hidden: false) do |a| %>
+                  <%= a.label { a.check_box + a.text } %>
+                <% end %>
+                <%#= f.collection_check_boxes :allergies, @allergies, :id, :allergen, include_hidden: false %>
+              </div>
+              <%#= f.collection_check_boxes :allergy_ids, @allergies, :id, :allergen,checked:@menu.allergy_ids ,include_hidden: false %>
             </div>
 
             <div class="row field d-grid text-center mt-3">
@@ -36,8 +36,10 @@
               <%= f.text_area :introduction, class: "col-md-6" %>
             </div>
 
-            <div class="form-group mt-4 offset-4">
-              <%= f.submit '新規登録', class:"btn btn-success col-3" %>
+            <div class="actions2 mt-4 offset-4">
+              <%= button_tag type: :submit, class: "btn btn-success active mx-auto btn-lg" do %>
+                <i class="fas fa-edit"></i> 編集する
+              <% end %>
             </div>
           <% end %>
         </div>
