--- a/app/views/restaurant/menus/new.html.erb
+++ b/app/views/restaurant/menus/new.html.erb
@@ -16,39 +16,42 @@
       <%= form_with model: @menu, url: restaurant_restaurant_menus_path, id: 'new_menu', class: 'new_menu' do |f| %>
 
         <div class="row field d-grid text-center mt-4">
-          <%= f.label :料理画像, class: "col-md-2" %>
+          <%= f.label :料理画像, class: "col-md-4 text-left" %>
           <%= f.file_field :image, accept: "image/*", class: "col-md-6" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :メニュー名, class: "col-md-2" %>
+          <%= f.label :メニュー名, class: "col-md-4 text-left" %>
           <%= f.text_field :name, class: "col-md-6" %>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <p>含まれるアレルゲン</p>
-          <%# @allergies.each do |allergy| %>
-            <!--<label>-->
-              <%#= check_box_tag 'Allergy[]' %>
-              <%#= allergy.allergen %>
-            <!--</label>-->
-          <%# end %>
-          <%= f.collection_check_boxes :allergy_ids, @allergies, :id, :allergen, include_hidden: false %>
+          <%= f.label :含まれるアレルゲン, class: "col-md-4 text-left" %>
+          <div class="allergies_check_boxes col-md-7">
+            <%= f.collection_check_boxes(:allergies, @allergies, :id, :allergen, include_hidden: false) do |a| %>
+              <%= a.label { a.check_box + a.text } %>
+            <% end %>
+          </div>
+        <%#= f.collection_check_boxes :allergy_ids, @allergies, :id, :allergen, include_hidden: false %>
 
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :税抜価格, class: "col-md-2" %>
-          <%= f.text_field :price, class: "col-md-3" %>円
+          <%= f.label :税抜価格, class: "col-md-4 text-left" %>
+          <%= f.text_field :price, class: "col-md-3" %>
+          <p class="text-center ml-2">円</p>
         </div>
 
         <div class="row field d-grid text-center mt-3">
-          <%= f.label :メニュー説明, class: "col-md-2" %>
-          <%= f.text_area :introduction, class: "col-md-6" %>
+          <%= f.label :メニュー説明, class: "col-md-4 text-left" %>
+          <%= f.text_area :introduction, size: "20x7", class: "col-md-6" %>
         </div>
 
-        <div class="row form-group mt-4 ml-35">
-          <%= f.submit '新規登録', class:"btn btn-success col-2" %>
+        <div class="actions2 mt-4 offset-4">
+          <%#= f.submit '新規登録', class:"btn btn-success col-2" %>
+          <%= button_tag type: :submit, class: "btn btn-success active mx-auto btn-lg" do %>
+            <i class="fas fa-utensils mr-2"></i>新規登録
+          <% end %>
         </div>
       <% end %>
     </div>
